# string32-rs

./: Cargo.toml  README.md
src/: charindices.rs  lib.rs  str32.rs  string32.rs  util.rs
